--- a/src/app.html
+++ b/src/app.html
@@ -18,11 +18,11 @@
 			rel="icon"
 			type="image/png"
 			sizes="16x16"
-			href="%sveltekit.assets%/icons%/favicon-16x16.png"
+			href="%sveltekit.assets%/icons/favicon-16x16.png"
 		/>
-		<link rel="manifest" href="%sveltekit.assets%/icons/site.webmanifest" />
+		<link rel="manifest" href="%sveltekit.assets%/site.webmanifest" />
 		<link rel="mask-icon" href="%sveltekit.assets%/icons/safari-pinned-tab.svg" color="#13171f" />
-		<meta name="msapplication-config" content="%sveltekit.assets%/icons/browserconfig.xml" />
+		<meta name="msapplication-config" content="%sveltekit.assets%/browserconfig.xml" />
 		<meta name="apple-mobile-web-app-title" content="BuzzLeague" />
 		<meta name="application-name" content="BuzzLeague" />
 		<meta name="msapplication-TileColor" content="#13171f" />
